@@ -1,7 +1,11 @@
 const fs = require('fs');
 const path = require('path');
+const jsToYaml = require('json-to-pretty-yaml');
 const Converter = require('./ReadYaml');
+const { logDebug, logVerbose } = require('../../globals/utils');
 
+// eslint-disable-next-line camelcase
+const ignore_patterns = ['.aws-sam', 'node_modules', '.git'];
 module.exports = class Cloudformation {
   constructor(config = {}) {
     this.lambdaRegex = config.lambdaRegex || /template.yaml/;
@@ -16,8 +20,9 @@ module.exports = class Cloudformation {
     this.lambdaResources = {};
     this.lambdaGlobals = {};
     this.lambdaOutputs = {};
-    this.lambdaTransform = {};
+    this.lambdaTransform = { Transform: [] };
     this.lambdaParameters = {};
+    this.lambdaConditions = {};
     this.applicationJson = {};
   }
 
@@ -35,30 +40,36 @@ module.exports = class Cloudformation {
    * @param {String} parent Default: .
    * @returns Array
    */
-  ScanDirectory(baseDir = null, parent = '.') {
+  ScanDirectory(baseDir = null, parent = '.', depth = 0) {
+    console.log(`ScanDirectory (${this.validTemplates.length} templates)`);
+    logDebug(`Depth = ${depth}`);
     if (!baseDir) {
+      logDebug(`Using '${this.sourceDirectory}' has baseDir`);
       baseDir = this.sourceDirectory;
     }
 
-    console.debug(`Try to readdir : ${path.resolve(parent, baseDir)}`);
+    logDebug(`Try to readdir : ${path.resolve(parent, baseDir)}`);
     const directories = fs.readdirSync(path.resolve(parent, baseDir));
 
-    directories.forEach((dir) => {
-      console.debug(`Scanning : ${path.resolve(parent, baseDir) + path.sep + dir}`);
-      if (fs.statSync(path.resolve(parent, baseDir) + path.sep + dir).isDirectory() && !dir.match(/.aws_sam/)) {
-        console.log(`Found a directory '${path.resolve(parent, baseDir) + path.sep + dir}'`);
-        this.ScanDirectory(dir, path.resolve(parent, baseDir));
+    for (const dir of directories) {
+      logDebug(`Scanning : ${path.resolve(parent, baseDir) + path.sep + dir}`);
+      if (fs.statSync(path.resolve(parent, baseDir) + path.sep + dir).isDirectory() && !ignore_patterns.includes(dir)) {
+        logDebug(`Found a directory '${path.resolve(parent, baseDir) + path.sep + dir}'`);
+        this.ScanDirectory(dir, path.resolve(parent, baseDir), (depth += 1));
       }
 
-      console.debug(`Checking regex : ${dir} matches ${this.lambdaRegex}`);
-      if (dir.match(this.lambdaRegex)) {
-        console.log('Found Lambda template !');
-        console.debug(`Valid Template path : ${path.resolve(parent, baseDir)}${path.sep}${dir}`);
+      logDebug(`Checking regex : ${dir} matches ${this.lambdaRegex}`);
+      const rgx = new RegExp(this.lambdaRegex);
+      if (rgx.exec(dir)) {
+        logDebug('Found Lambda template !');
+        console.log(`${'SUCCESS'.success} Valid Template path : ${path.resolve(parent, baseDir)}${path.sep}${dir}`);
         this.validTemplates.push(`${path.resolve(parent, baseDir)}${path.sep}${dir}`);
-      }
-    });
 
-    console.debug(this.validTemplates);
+        return;
+      }
+    }
+
+    logDebug(this.validTemplates);
     return this.validTemplates;
   }
 
@@ -66,6 +77,7 @@ module.exports = class Cloudformation {
    * Read Lambda Templates
    */
   ReadTemplate() {
+    console.log('ReadTemplate');
     const convert = new Converter({
       lambdaBasePath: this.lambdaBasePath,
       stage: this.stage,
@@ -74,25 +86,31 @@ module.exports = class Cloudformation {
     });
 
     this.validTemplates.forEach((template) => {
-      console.log(`Read Template : ${template}`);
+      console.log(`Processing Template : ${template}`);
       convert.LoadYaml(template);
-      console.log(convert.json);
+      logDebug(convert.json);
       convert.ExtractResources();
-      // convert.ExtractLambdaInfo();
-      // TODO: Extract Log Group
-      // TODO: Extract Alarms
-      // TODO: How to do that dynamically
-      console.log(convert.GetConverted());
-      // FIXME: it doesnt work
+      logDebug(convert.GetConverted());
       this.lambdaResources = { ...this.lambdaResources, ...convert.GetConverted().Resources };
       this.lambdaGlobals = { ...this.lambdaGlobals, ...convert.GetConverted().Globals };
       this.lambdaOutputs = { ...this.lambdaOutputs, ...convert.GetConverted().Outputs };
-      this.lambdaTransform = { ...this.lambdaTransform, ...convert.GetConverted().Transform };
       this.lambdaParameters = { ...this.lambdaParameters, ...convert.GetConverted().Parameters };
+      this.lambdaConditions = { ...this.lambdaConditions, ...convert.GetConverted().Conditions };
+      if (typeof convert.GetConverted().Transform === 'string') {
+        this.lambdaTransform = {
+          Transform: [...this.lambdaTransform.Transform, convert.GetConverted().Transform],
+        };
+      } else {
+        logVerbose(`Transform type : ${typeof convert.GetConverted().Transform}`);
+        this.lambdaTransform = {
+          Transform: [...this.lambdaTransform.Transform, ...convert.GetConverted().Transform],
+        };
+      }
     });
   }
 
   ReadApplicationTemplate() {
+    console.log('ReadApplicationTemplate');
     const convert = new Converter({
       lambdaBasePath: this.lambdaBasePath,
       stage: this.stage,
@@ -105,16 +123,18 @@ module.exports = class Cloudformation {
       ...convert.GetFormatVersion(),
       ...convert.GetTransform(),
       ...convert.GetDescription(),
+      ...convert.GetConditions(),
       Globals: { Function: convert.GetGlobals() },
       Parameters: convert.GetParameters(),
       Resources: convert.GetResources(),
       Outputs: convert.GetOutputs(),
     };
 
-    console.debug(this.GetApplicationJson());
+    logDebug(this.GetApplicationJson());
   }
 
   MergeTemplate() {
+    console.log('MergeTemplate');
     if (!this.GetApplicationJson() || Object.keys(this.GetApplicationJson()).length === 0) {
       throw new Error('Missing Application JSON.');
     }
@@ -123,34 +143,56 @@ module.exports = class Cloudformation {
       throw new Error('No lambda found.');
     }
 
-    console.debug('Merging templates');
-    // TODO: merge transform
-    // FIXME: doesnt work .. need appropriate logic...
-    this.applicationJson.Transform = {
-      ...this.lambdaTransform,
-      ...this.applicationJson.Transform,
-    };
-    // TODO: merge parameters
+    logDebug('Merging Transform');
+    if (typeof this.applicationJson.Transform === 'string') {
+      this.applicationJson.Transform = [...this.lambdaTransform.Transform, this.applicationJson.Transform];
+    } else {
+      this.applicationJson.Transform = [...this.lambdaTransform.Transform, ...this.applicationJson.Transform];
+    }
+    this.applicationJson.Transform = [...new Set(this.applicationJson.Transform)];
+
+    logDebug('Merging parameters');
     this.applicationJson.Parameters = {
       ...this.lambdaParameters,
       ...this.applicationJson.Parameters,
     };
-    // TODO: merge outputs
+    logDebug('Merging Outputs');
     this.applicationJson.Outputs = {
       ...this.lambdaOutputs,
       ...this.applicationJson.Outputs,
     };
-    // TODO: merge globals
+    logDebug('Merging Globals');
+
     this.applicationJson.Globals = {
-      ...this.lambdaGlobals,
-      ...this.applicationJson.Globals,
+      Function: {
+        ...this.lambdaGlobals.Function,
+        ...this.applicationJson.Globals.Function,
+      },
     };
-    // TODO: merge resources
+    this.applicationJson.Globals.Function.Environment = {
+      ...this.lambdaGlobals.Function.Environment,
+      ...this.applicationJson.Globals.Function.Environment,
+    };
+
+    logDebug('Merging Resources');
     this.applicationJson.Resources = {
       ...this.lambdaResources,
       ...this.applicationJson.Resources,
     };
 
-    console.log(this.GetApplicationJson());
+    logDebug('Merging Conditions');
+    this.applicationJson.Conditions = {
+      ...this.lambdaConditions,
+      ...this.applicationJson.Conditions,
+    };
+
+    logDebug(this.GetApplicationJson());
+  }
+
+  SaveMergedTemplate(filename) {
+    console.log('SaveMergedTemplate');
+    fs.writeFileSync(filename, jsToYaml.stringify(this.GetApplicationJson()));
+
+    console.log(`Template saved '${path.resolve('.', `${filename}'`)}`);
   }
 };
