@@ -2,6 +2,7 @@
 const { yamlParse } = require('yaml-cfn');
 const fs = require('fs');
 const path = require('path');
+const { logDebug } = require('../../globals/utils');
 
 /**
  * Quick fix for nested Object
@@ -77,6 +78,7 @@ class Converter {
     this.description = {};
     this.outputs = {};
     this.transform = {};
+    this.conditions = {};
 
     this.config = {
       lambdaBasePath: config.lambdaBasePath || './',
@@ -114,11 +116,16 @@ class Converter {
     return this.description;
   }
 
+  GetConditions() {
+    return this.conditions;
+  }
+
   GetFormatVersion() {
     return this.AWSTemplateFormatVersion;
   }
 
   LoadYaml(yamlPath) {
+    console.log('LoadYaml');
     if (!yamlPath) {
       throw new Error('LoadYaml: Missing yaml path');
     }
@@ -127,6 +134,7 @@ class Converter {
     this.resources = { ...this.json.Resources };
     this.parameters = { ...this.json.Parameters };
     this.outputs = { ...this.json.Outputs };
+    this.conditions = { ...this.json.Conditions };
     this.AWSTemplateFormatVersion = { AWSTemplateFormatVersion: this.json.AWSTemplateFormatVersion };
     this.description = { Description: this.json.Description };
     this.transform = { Transform: this.json.Transform };
@@ -139,17 +147,26 @@ class Converter {
   }
 
   ExtractResources() {
+    console.log('ExtractResources');
     this.converted = {};
     Object.keys(this.json).forEach((key) => {
-      if (key === 'Resources' || key === 'Globals' || key === 'Parameters' || key === 'Outputs') {
+      if (
+        key === 'Resources' ||
+        key === 'Globals' ||
+        key === 'Parameters' ||
+        key === 'Outputs' ||
+        key === 'Transform' ||
+        key === 'Conditions'
+      ) {
         this.converted[key] = this.json[key];
       }
     });
 
-    console.log(this.converted);
+    logDebug(this.converted);
   }
 
   ExtractLambdaInfo() {
+    console.log('ExtractLambdaInfo');
     this.converted = this.lambdas.map((lambda) => {
       const env = {
         Variables: {
