@@ -1,3 +1,7 @@
+2021-06-25
+
+- Added --cloudformation to read all template.yml files in each lambda, append all that and generate the appropriate application.yaml file.
+
 2021-06-23
 
 - Added mysqldump, it uses the config service and the same parameters than liquibase.
